--- a/.github/workflows/build_exe_and_release.yml
+++ b/.github/workflows/build_exe_and_release.yml
@@ -1,10 +1,12 @@
 name: Build EXE and create release
 on:
   push:
+    branches:
+      - "main"
 
 jobs:
   build:
-    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/v')
+    if: contains(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
