--- a/.github/workflows/build_test_exe.yml
+++ b/.github/workflows/build_test_exe.yml
@@ -13,10 +13,15 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: PyInstaller Windows
-        uses: JackMcKew/pyinstaller-action-windows@main
-        with:
-          path: src
+      - name: Install Dependencies
+        run: |
+          python -m pip install pyinstaller
+          python -m pip install -r src/requirements.txt
+          python -m pyinstaller src/search_files_for_value.py
+      # - name: PyInstaller Windows
+      #   uses: JackMcKew/pyinstaller-action-windows@main
+      #   with:
+      #     path: src
       - name: Move Executable
         run: |
           mv src/dist/windows/*.exe CHLOE.exe
