--- a/.github/workflows/build_test_exe.yml
+++ b/.github/workflows/build_test_exe.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           python -m pip install pyinstaller
           python -m pip install -r src/requirements.txt
-          python -m pyinstaller src/search_files_for_value.py
+          pyinstaller --onefile src/search_files_for_value.py
       # - name: PyInstaller Windows
       #   uses: JackMcKew/pyinstaller-action-windows@main
       #   with:
