--- a/.github/workflows/build_test_exe.yml
+++ b/.github/workflows/build_test_exe.yml
@@ -24,6 +24,6 @@ jobs:
       - name: Build EXE
         run: pyinstaller --onefile src/search_files_for_value.py
       - name: View Dir structure
-        run: dir
+        run: dir dist
       - name: Test Executable
-        run: dist/CHLOE.exe -h
+        run: .\dist\CHLOE.exe -h
