--- a/.github/workflows/build_test_exe.yml
+++ b/.github/workflows/build_test_exe.yml
@@ -26,4 +26,6 @@ jobs:
       - name: View Dir structure
         run: dir dist
       - name: Test Executable
-        run: .\dist\CHLOE.exe -h
+        run: |
+          cd dist
+          CHLOE.exe -h
