--- a/.github/workflows/build_exe_and_release.yml
+++ b/.github/workflows/build_exe_and_release.yml
@@ -2,12 +2,11 @@ name: Build EXE and create release
 on:
   push:
     branches:
-      - main
+      - refs/tags/v*.*.*/main
 
 jobs:
   build:
-    if: contains(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 3.8
@@ -16,6 +15,7 @@ jobs:
           python-version: 3.8
       - name: Get the version #https://github.community/t/how-to-get-just-the-tag-name/16241/10
         id: get_version
+        shell: bash # https://github.community/t/how-to-get-just-the-tag-name/16241/14
         run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}          
       - name: Install Dependencies
         run: |
