--- a/.github/workflows/build_exe_and_release.yml
+++ b/.github/workflows/build_exe_and_release.yml
@@ -2,7 +2,9 @@ name: Build EXE and create release
 on:
   push:
     branches:
-      - refs/tags/v*.*.*/main
+      - main
+    tags:
+      - v*.*.*
 
 jobs:
   build:
