--- a/.github/workflows/build_test_exe.yml
+++ b/.github/workflows/build_test_exe.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install pyinstaller
-          python -m pip install -r src/requirements.txt
+          python -m pip install -r requirements.txt
       - name: Build EXE
-        run: pyinstaller --onefile src/search_files_for_value.py
+        run: pyinstaller --onefile search_files_for_value.py
       - name: Test Executable
         run: .\dist\search_files_for_value.exe -h
