--- a/.github/workflows/build_exe_and_release.yml
+++ b/.github/workflows/build_exe_and_release.yml
@@ -1,13 +1,12 @@
 name: Build EXE and create release
 on:
   push:
-    branches:
-      - main
     tags:
       - v*.*.*
 
 jobs:
   build:
+    if: github.event.base_ref == 'refs/heads/main'
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
@@ -26,7 +25,7 @@ jobs:
       - name: Build EXE
         run: pyinstaller --onefile search_files_for_value.py
       - name: Move Executable
-        run: dist/search_files_for_value.exe CHLOE.exe
+        run: move dist/search_files_for_value.exe CHLOE.exe
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
