--- a/.github/workflows/build_exe_and_release.yml
+++ b/.github/workflows/build_exe_and_release.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == refs/heads/main
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
