--- a/.github/workflows/build_exe_and_release.yml
+++ b/.github/workflows/build_exe_and_release.yml
@@ -9,41 +9,43 @@ jobs:
     if: github.ref == refs/heads/main
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-      - name: Get the version #https://github.community/t/how-to-get-just-the-tag-name/16241/10
-        id: get_version
-        shell: bash # https://github.community/t/how-to-get-just-the-tag-name/16241/14
-        run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}          
-      - name: Install Dependencies
-        run: |
-          python -m pip install pyinstaller
-          python -m pip install -r requirements.txt
-      - name: Build EXE
-        run: pyinstaller --onefile search_files_for_value.py
-      - name: Move Executable
-        run: move dist/search_files_for_value.exe CHLOE.exe
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ steps.get_version.outputs.VERSION }}
-          draft: false
-          prerelease: false
-          body_path: change.log
-      - name: Upload Release Asset
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url:  ${{ steps.create_release.outputs.upload_url }}
-          asset_path: .\CHLOE.exe
-          asset_name: CHLOE.exe
-          asset_content_type: application/vnd.microsoft.portable-executable # https://stackoverflow.com/a/43916291
+      - name: Test
+        run: echo github.ref
+      # - uses: actions/checkout@v2
+      # - name: Set up Python 3.8
+      #   uses: actions/setup-python@v2
+      #   with:
+      #     python-version: 3.8
+      # - name: Get the version #https://github.community/t/how-to-get-just-the-tag-name/16241/10
+      #   id: get_version
+      #   shell: bash # https://github.community/t/how-to-get-just-the-tag-name/16241/14
+      #   run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}          
+      # - name: Install Dependencies
+      #   run: |
+      #     python -m pip install pyinstaller
+      #     python -m pip install -r requirements.txt
+      # - name: Build EXE
+      #   run: pyinstaller --onefile search_files_for_value.py
+      # - name: Move Executable
+      #   run: move dist/search_files_for_value.exe CHLOE.exe
+      # - name: Create Release
+      #   id: create_release
+      #   uses: actions/create-release@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     tag_name: ${{ github.ref }}
+      #     release_name: Release ${{ steps.get_version.outputs.VERSION }}
+      #     draft: false
+      #     prerelease: false
+      #     body_path: change.log
+      # - name: Upload Release Asset
+      #   id: upload-release-asset 
+      #   uses: actions/upload-release-asset@v1
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url:  ${{ steps.create_release.outputs.upload_url }}
+      #     asset_path: .\CHLOE.exe
+      #     asset_name: CHLOE.exe
+      #     asset_content_type: application/vnd.microsoft.portable-executable # https://stackoverflow.com/a/43916291
