--- a/.github/workflows/build_exe_and_release.yml
+++ b/.github/workflows/build_exe_and_release.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: Test
-        run: echo github.ref
+        run: echo "$GITHUB_REF"
       # - uses: actions/checkout@v2
       # - name: Set up Python 3.8
       #   uses: actions/setup-python@v2
