--- a/.github/workflows/build_exe_and_release.yml
+++ b/.github/workflows/build_exe_and_release.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Test
         shell: python
-        run: print(github.ref)
+        run: print('${{ github.ref }}')
       # - uses: actions/checkout@v2
       # - name: Set up Python 3.8
       #   uses: actions/setup-python@v2
